# Test_task_Octavian_Gaming

./: CMakeLists.txt  README.md
src/: Button.cpp  Button.h  Reel.cpp  Reel.h  SlotMachine.cpp  SlotMachine.h  StateMachine.cpp  StateMachine.h  TextUtils.cpp  TextUtils.h  Vec2.h  main.cpp
src/States/: IdleState.cpp  IdleState.h  SpinningState.cpp  SpinningState.h  State.h  WinState.cpp  WinState.h
x64-release/: CMakeCache.txt  build.ninja  cmake_install.cmake
